k8s/document-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: document-api-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.ufukcetinkaya.net
    secretName: document-api-tls
  rules:
  - host: api.ufukcetinkaya.net
    http:
      paths:
      - path: /document
        pathType: Prefix
        backend:
          service:
            name: document-api
            port:
              number: 80
